[package]
name = "simple-bitset"
version = "0.1.0"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-simple-bitset"
description = "Simple no-std compatible 64-bit and 128-bit bitsets for embedded applications"
keywords = ["no_std", "bitset", "embedded", "data-structures"]
categories = [
    "data-structures",
    "embedded",
    "no-std",
]

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex-header.html"]

[dependencies]
serde = "1.0.228"
postcard = { version = "1.1.3", features = ["embedded-io"] }

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
