[package]
name = "simple-bitset"
version = "0.1.4"
edition = "2024"
authors = ["Martin Budden"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/martinbudden/crate-simple-bitset"
description = "Simple no-std compatible 64-bit and 128-bit bitsets for embedded applications"
keywords = ["no_std", "bitset", "embedded", "data-structures"]
categories = [
    "data-structures",
    "embedded",
    "no-std",
]

[package.metadata.docs.rs]
all-features = true

[build-dependencies]
rustc_version = "0.4.1"

[features]
default = []
serde = ["dep:serde", "postcard", "sequential-storage"]

[dependencies]
serde = { version = "1.0.228", default-features = false, features = ["derive"], optional = true }
postcard = { version = "1.1.3", default-features = false, features = ["embedded-io"], optional = true }
sequential-storage = { version = "7.2.0", features = ["postcard"], optional = true }

# see https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
opt-level = 0
debug = "line-tables-only"
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[profile.dev.package."*"]
debug = false

[profile.debugging]
inherits = "dev"
debug = true

[profile.release]
opt-level = 3
debug = false
# split-debuginfo = '...'  # Platform-specific.
strip = "none"
debug-assertions = false
overflow-checks = false
lto = false
panic = 'abort'
incremental = false
codegen-units = 16
rpath = false

[profile.release-lto]
inherits = "release"
lto = true
